# unidemo

./: Cargo.toml  uniffi.toml
src/: lib.rs  non_empty_collection.rs
tests/: bindgentests.rs
tests/bindings/: key_tests.swift
